Enable security on unit display fields

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -527,3 +527,4 @@ _UI_WafModel_dynamicMenus_feature = Dynamic Menus
 _UI_UnitFeature_collectionUiAllowAdd_feature = Collection Ui Allow Add
 _UI_UnitFeature_collectionUiAllowRemove_feature = Collection Ui Allow Remove
 _UI_CollectionUnit_containingAssociation_feature = Containing Association
+_UI_UnitField_requiresRole_feature = Requires Role
