Move security controls from select actions to units

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -528,3 +528,7 @@ _UI_UnitFeature_collectionUiAllowAdd_feature = Collection Ui Allow Add
 _UI_UnitFeature_collectionUiAllowRemove_feature = Collection Ui Allow Remove
 _UI_CollectionUnit_containingAssociation_feature = Containing Association
 _UI_UnitField_requiresRole_feature = Requires Role
+_UI_DynamicUnit_disableWhen_feature = Disable When
+_UI_InlineAction_disableWhen_feature = Disable When
+_UI_DynamicUnit_enableWhen_feature = Enable When
+_UI_InlineAction_disenableWhen_feature = Disenable When
