Take select action security directly from target

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -532,3 +532,7 @@ _UI_DynamicUnit_disableWhen_feature = Disable When
 _UI_InlineAction_disableWhen_feature = Disable When
 _UI_DynamicUnit_enableWhen_feature = Enable When
 _UI_InlineAction_disenableWhen_feature = Disenable When
+_UI_DeleteAction_requiresRole_feature = Requires Role
+_UI_DeleteAction_enableWhen_feature = Enable When
+_UI_FeatureSupportAction_requiresRole_feature = Requires Role
+_UI_FeatureSupportAction_enableWhen_feature = Enable When
