Explicitly model continued editing on save

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -539,3 +539,4 @@ _UI_FeatureSupportAction_enableWhen_feature = Enable When
 _UI_EditUnit_disableCondition_feature = Disable Condition
 _UI_DataUnit_onlyDisplayWhenNotEmpty_feature = Only Display When Not Empty
 _UI_Page_topMenuRequiresRole_feature = Top Menu Requires Role
+_UI_EditUnit_onSaveContinueEditing_feature = On Save Continue Editing
