Allow context selection to be via a path rather an single association

--- a/uk.ac.man.cs.mdsd.service.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.service.edit/plugin.properties
@@ -225,3 +225,4 @@ _UI_ConstantReference_value_feature = Value
 _UI_Constant_definedBy_feature = Defined By
 _UI_Service_uses_feature = Uses
 _UI_Selection_selectVia_feature = Select Via
+_UI_Selection_selectPath_feature = Select Path
