Remove redundant default selection from image unit

--- a/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/.gitignore
+++ b/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/.gitignore
@@ -3,3 +3,75 @@
 /WafFactory.java
 /WafModel.java
 /WafPackage.java
+/Authentication.java
+/CasAuthentication.java
+/DisplayElement.java
+/ImageFilter.java
+/ImageManipulation.java
+/LocalAuthenticationSystem.java
+/ActionMenuEntry.java
+/AjaxTechnologies.java
+/AssociationReference.java
+/AuthenticationKeyTypes.java
+/AuthenticationUnit.java
+/CaptchaField.java
+/ChildPath.java
+/ChildPathAssociation.java
+/ChildPathAttribute.java
+/CollectionDisplayOptions.java
+/CollectionUnit.java
+/ContentUnit.java
+/ControlUnit.java
+/CreateUnit.java
+/CreateUpdateUnit.java
+/DataTypeField.java
+/DataUnit.java
+/DateField.java
+/DeleteAction.java
+/DetailsUnit.java
+/DynamicMenu.java
+/DynamicUnit.java
+/EditStaticTextMenuEntry.java
+/EditUnit.java
+/FeaturePath.java
+/FeaturePathAssociation.java
+/FeaturePathAttribute.java
+/FeatureSupportAction.java
+/ForgottenPasswordUnit.java
+/FrameworkTechnologies.java
+/GalleryUnit.java
+/GlobalMenu.java
+/ImageIndexUnit.java
+/ImageUnit.java
+/IndexGridUnit.java
+/IndexLineDirectionUnit.java
+/IndexPageDirectionUnit.java
+/IndexUnit.java
+/InlineAction.java
+/InlineActionContainer.java
+/InputTechnologies.java
+/InterfaceField.java
+/LoginUnit.java
+/MapUnit.java
+/Menu.java
+/MenuEntry.java
+/Page.java
+/PageTopMenuOptions.java
+/Query.java
+/QueryParameter.java
+/RegistrationUnit.java
+/RouteActual.java
+/SearchUnit.java
+/SelectAction.java
+/SelectableUnit.java
+/SingletonUnit.java
+/SliderUnit.java
+/StaticUnit.java
+/ThumbnailFilter.java
+/UnitAssociation.java
+/UnitAttribute.java
+/UnitContainer.java
+/UnitFeature.java
+/UnitField.java
+/UnitSupportAction.java
+/UpdateUnit.java
