--- a/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
+++ b/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
@@ -61,3 +61,6 @@
 /UnitFeatureImpl.java
 /UnitSupportActionImpl.java
 /UpdateUnitImpl.java
+/WafModelImpl.java
+/GlobalMenuImpl.java
+/RouteActualImpl.java
