--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -540,3 +540,6 @@ _UI_EditUnit_disableCondition_feature = Disable Condition
 _UI_DataUnit_onlyDisplayWhenNotEmpty_feature = Only Display When Not Empty
 _UI_Page_topMenuRequiresRole_feature = Top Menu Requires Role
 _UI_EditUnit_onSaveContinueEditing_feature = On Save Continue Editing
+_UI_ThumbnailFilter_mode_feature = Mode
+_UI_ThumbnailModes_Crop_literal = Crop
+_UI_ThumbnailModes_Reszie_literal = Reszie
