Allow thumbnail filters to have a crop mode

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -542,4 +542,4 @@ _UI_Page_topMenuRequiresRole_feature = Top Menu Requires Role
 _UI_EditUnit_onSaveContinueEditing_feature = On Save Continue Editing
 _UI_ThumbnailFilter_mode_feature = Mode
 _UI_ThumbnailModes_Crop_literal = Crop
-_UI_ThumbnailModes_Reszie_literal = Reszie
+_UI_ThumbnailModes_Resize_literal = Resize
