Allow use of icons on pagination page links

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -543,3 +543,9 @@ _UI_EditUnit_onSaveContinueEditing_feature = On Save Continue Editing
 _UI_ThumbnailFilter_mode_feature = Mode
 _UI_ThumbnailModes_Crop_literal = Crop
 _UI_ThumbnailModes_Resize_literal = Resize
+_UI_CollectionUnit_nextPageIconName_feature = Next Page Icon Name
+_UI_CollectionUnit_previousPageIconName_feature = Previous Page Icon Name
+_UI_CollectionUnit_firstPageIconName_feature = First Page Icon Name
+_UI_CollectionUnit_lastPageIconName_feature = Last Page Icon Name
+_UI_CollectionUnit_paginationClass_feature = Pagination Class
+_UI_CollectionUnit_paginationElementClass_feature = Pagination Element Class
