Support definiiton of logo image and its manipulation

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -112,9 +112,6 @@ _UI_WafModel_pages_feature = Pages
 _UI_WafModel_menus_feature = Menus
 _UI_WafModel_siteName_feature = Site Name
 _UI_WafModel_siteTitle_feature = Site Title
-_UI_WafModel_developmentVersion_feature = Development Version
-_UI_WafModel_baseURL_feature = Base URL
-_UI_WafModel_rewriteURLs_feature = Rewrite UR Ls
 _UI_WafModel_webmasterEmail_feature = Webmaster Email
 _UI_WafModel_copyrightText_feature = Copyright Text
 _UI_WafModel_metaDescription_feature = Meta Description
@@ -549,3 +546,8 @@ _UI_CollectionUnit_firstPageIconName_feature = First Page Icon Name
 _UI_CollectionUnit_lastPageIconName_feature = Last Page Icon Name
 _UI_CollectionUnit_paginationClass_feature = Pagination Class
 _UI_CollectionUnit_paginationElementClass_feature = Pagination Element Class
+_UI_ImageIndexUnit_columnClass_feature = Column Class
+_UI_WafModel_iconImage_feature = Icon Image
+_UI_WafModel_iconFilters_feature = Icon Filters
+_UI_WafModel_logoImage_feature = Logo Image
+_UI_WafModel_logoFilters_feature = Logo Filters
