Always use menus rather than page flags for navigation

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -551,3 +551,5 @@ _UI_WafModel_iconImage_feature = Icon Image
 _UI_WafModel_iconFilters_feature = Icon Filters
 _UI_WafModel_logoImage_feature = Logo Image
 _UI_WafModel_logoFilters_feature = Logo Filters
+_UI_SubmenuEntry_type = Submenu Entry
+_UI_SubmenuEntry_submenu_feature = Submenu
