Rename side menu to context menu to make purpose clear

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -553,3 +553,4 @@ _UI_WafModel_logoImage_feature = Logo Image
 _UI_WafModel_logoFilters_feature = Logo Filters
 _UI_SubmenuEntry_type = Submenu Entry
 _UI_SubmenuEntry_submenu_feature = Submenu
+_UI_Page_contextMenu_feature = Context Menu
