Support image background filters

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -554,3 +554,19 @@ _UI_WafModel_logoFilters_feature = Logo Filters
 _UI_SubmenuEntry_type = Submenu Entry
 _UI_SubmenuEntry_submenu_feature = Submenu
 _UI_Page_contextMenu_feature = Context Menu
+_UI_BackgroundFilter_type = Background Filter
+_UI_BackgroundFilter_color_feature = Color
+_UI_BackgroundFilter_width_feature = Width
+_UI_BackgroundFilter_height_feature = Height
+_UI_BackgroundFilter_position_feature = Position
+_UI_BackgroundPositions_Crop_literal = Crop
+_UI_BackgroundPositions_Resize_literal = Resize
+_UI_BackgroundPositions_TopLeft_literal = TopLeft
+_UI_BackgroundPositions_Top_literal = Top
+_UI_BackgroundPositions_TopRight_literal = TopRight
+_UI_BackgroundPositions_Left_literal = Left
+_UI_BackgroundPositions_Center_literal = Center
+_UI_BackgroundPositions_Right_literal = Right
+_UI_BackgroundPositions_BottomLeft_literal = BottomLeft
+_UI_BackgroundPositions_Bottom_literal = Bottom
+_UI_BackgroundPositions_BottomRight_literal = BottomRight
