Allow feature paths as expression variables

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -570,3 +570,9 @@ _UI_BackgroundPositions_Right_literal = Right
 _UI_BackgroundPositions_BottomLeft_literal = BottomLeft
 _UI_BackgroundPositions_Bottom_literal = Bottom
 _UI_BackgroundPositions_BottomRight_literal = BottomRight
+_UI_ImageIndexUnit_overlayTitle_feature = Overlay Title
+_UI_ImageIndexUnit_omitFieldLabels_feature = Omit Field Labels
+_UI_UnitField_hideWhen_feature = Hide When
+_UI_DynamicUnit_hideWhen_feature = Hide When
+_UI_DynamicUnit_messageWhenHidden_feature = Message When Hidden
+_UI_EditUnit_disableWhen_feature = Disable When
