Allow optional truncating of image titles

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -576,3 +576,4 @@ _UI_UnitField_hideWhen_feature = Hide When
 _UI_DynamicUnit_hideWhen_feature = Hide When
 _UI_DynamicUnit_messageWhenHidden_feature = Message When Hidden
 _UI_EditUnit_disableWhen_feature = Disable When
+_UI_ImageUnit_truncateTitle_feature = Truncate Title
