Allow titling of associations with any available label

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -579,3 +579,6 @@ _UI_EditUnit_disableWhen_feature = Disable When
 _UI_ImageUnit_truncateTitle_feature = Truncate Title
 _UI_SelectAction_x_feature = X
 _UI_SelectAction_valuePath_feature = Value Path
+_UI_FeaturePathLabel_type = Feature Path Label
+_UI_FeaturePathLabel_name_feature = Name
+_UI_FeaturePathLabel_label_feature = Label
