--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -582,3 +582,5 @@ _UI_SelectAction_valuePath_feature = Value Path
 _UI_FeaturePathLabel_type = Feature Path Label
 _UI_FeaturePathLabel_name_feature = Name
 _UI_FeaturePathLabel_label_feature = Label
+_UI_ImageUnit_title_feature = Title
+_UI_ImageIndexUnit_sizeClass_feature = Size Class
