Allow all image unit types to have dynamic unit title

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -584,3 +584,7 @@ _UI_FeaturePathLabel_name_feature = Name
 _UI_FeaturePathLabel_label_feature = Label
 _UI_ImageUnit_title_feature = Title
 _UI_ImageIndexUnit_sizeClass_feature = Size Class
+_UI_ImageIndexUnit_largeImageFilter_feature = Large Image Filter
+_UI_ImageIndexUnit_cardClass_feature = Card Class
+_UI_ImageUnit_imageTitleFeature_feature = Image Title Feature
+_UI_ImageUnit_truncateImageTitle_feature = Truncate Image Title
