Allow index image to be action anchor

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -588,3 +588,9 @@ _UI_ImageIndexUnit_largeImageFilter_feature = Large Image Filter
 _UI_ImageIndexUnit_cardClass_feature = Card Class
 _UI_ImageUnit_imageTitleFeature_feature = Image Title Feature
 _UI_ImageUnit_truncateImageTitle_feature = Truncate Image Title
+_UI_ImageIndexUnit_overlaySingleAction_feature = Overlay Single Action
+_UI_SliderUnit_showTime_feature = Show Time
+_UI_SliderUnit_transitionTime_feature = Transition Time
+_UI_GalleryUnit_showTime_feature = Show Time
+_UI_GalleryUnit_transitionTime_feature = Transition Time
+_UI_ImageIndexUnit_overlaySingleSelectAction_feature = Overlay Single Select Action
