Ensure that index units have single selection

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -276,7 +276,6 @@ _UI_CollectionUnit_useDisabledPageLinks_feature = Use Disabled Page Links
 _UI_CollectionUnit_useFirstLastPageLinks_feature = Use First Last Page Links
 _UI_CollectionUnit_firstPageLabel_feature = First Page Label
 _UI_CollectionUnit_lastPageLabel_feature = Last Page Label
-_UI_EditUnit_defaultSelection_feature = Default Selection
 _UI_EditUnit_title_feature = Title
 _UI_EditUnit_enableWhen_feature = Enable When
 _UI_EditUnit_confirmDestination_feature = Confirm Destination
@@ -290,7 +289,6 @@ _UI_MapUnit_readOnly_feature = Read Only
 _UI_MapUnit_defaultZoomLevel_feature = Default Zoom Level
 _UI_MapUnit_location_feature = Location
 _UI_MapUnit_placeName_feature = Place Name
-_UI_DataUnit_defaultSelection_feature = Default Selection
 _UI_DataUnit_title_feature = Title
 _UI_DetailsUnit_onlyDisplayWhenNotEmpty_feature = Only Display When Not Empty
 _UI_DetailsUnit_omitFieldLabels_feature = Omit Field Labels
@@ -301,7 +299,6 @@ _UI_ControlUnit_submitLabel_feature = Submit Label
 _UI_ControlUnit_cancelDestination_feature = Cancel Destination
 _UI_ControlUnit_cancelLabel_feature = Cancel Label
 _UI_SearchUnit_resultsDestination_feature = Results Destination
-_UI_ImageUnit_defaultSelection_feature = Default Selection
 _UI_ImageUnit_imagePathFeature_feature = Image Path Feature
 _UI_ImageUnit_titleFeature_feature = Title Feature
 _UI_ImageUnit_missingImagePath_feature = Missing Image Path
@@ -600,3 +597,6 @@ _UI_Badge_value_feature = Value
 _UI_Badge_displayWhen_feature = Display When
 _UI_Badge_newWhen_feature = New When
 _UI_CollectionUnit_badges_feature = Badges
+_UI_CollectionUnit_findContainerSelection_feature = Find Container Selection
+_UI_CollectionUnit_findElementSelection_feature = Find Element Selection
+_UI_DetailsUnit_selection_feature = Selection
