Allow pagination parent to be defined

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -601,3 +601,6 @@ _UI_CollectionUnit_findContainerSelection_feature = Find Container Selection
 _UI_CollectionUnit_findElementSelection_feature = Find Element Selection
 _UI_DetailsUnit_selection_feature = Selection
 _UI_CollectionUnit_omitContainerLoad_feature = Omit Container Load
+_UI_CollectionUnit_paginationContainerPath_feature = Pagination Container Path
+_UI_CollectionUnit_paginationContainer_feature = Pagination Container
+_UI_CollectionUnit_paginationParent_feature = Pagination Parent
