Allow suffixes on expressions

--- a/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.expression.edit/plugin.properties
@@ -216,3 +216,5 @@ _UI_CurrentUser_type = Current User
 _UI_PredicateInOperator_type = Predicate In Operator
 _UI_PredicateInOperator_left_feature = Left
 _UI_PredicateInOperator_right_feature = Right
+_UI_Expression_suffxies_feature = Suffxies
+_UI_Expression_suffixes_feature = Suffixes
