Simplify menu options

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -604,3 +604,4 @@ _UI_CollectionUnit_omitContainerLoad_feature = Omit Container Load
 _UI_CollectionUnit_paginationContainerPath_feature = Pagination Container Path
 _UI_CollectionUnit_paginationContainer_feature = Pagination Container
 _UI_CollectionUnit_paginationParent_feature = Pagination Parent
+_UI_SubmenuEntry_requiresRole_feature = Requires Role
