Allow enlargement of index images

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -605,3 +605,7 @@ _UI_CollectionUnit_paginationContainerPath_feature = Pagination Container Path
 _UI_CollectionUnit_paginationContainer_feature = Pagination Container
 _UI_CollectionUnit_paginationParent_feature = Pagination Parent
 _UI_SubmenuEntry_requiresRole_feature = Requires Role
+_UI_ImageIndexUnit_revealUntruncatedContent_feature = Reveal Untruncated Content
+_UI_UnitField_truncate_feature = Truncate
+_UI_ImageIndexUnit_enableImageEnlargement_feature = Enable Image Enlargement
+_UI_ImageUnit_missingImageFilter_feature = Missing Image Filter
