--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -609,3 +609,4 @@ _UI_ImageIndexUnit_revealUntruncatedContent_feature = Reveal Untruncated Content
 _UI_UnitField_truncate_feature = Truncate
 _UI_ImageIndexUnit_enableImageEnlargement_feature = Enable Image Enlargement
 _UI_ImageUnit_missingImageFilter_feature = Missing Image Filter
+_UI_WafModel_useDbSessionStorage_feature = Use Db Session Storage
