Migrate to new EMF code generator

--- a/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/.gitignore
+++ b/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/.gitignore
@@ -75,3 +75,10 @@
 /UnitField.java
 /UnitSupportAction.java
 /UpdateUnit.java
+/BackgroundFilter.java
+/FeaturePathLabel.java
+/SubmenuEntry.java
+/BackgroundPositions.java
+/Badge.java
+/IndexCardsUnit.java
+/ThumbnailModes.java
