--- a/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
+++ b/uk.ac.man.cs.mdsd.waf.model/src-gen/uk/ac/man/cs/mdsd/waf/impl/.gitignore
@@ -64,3 +64,8 @@
 /WafModelImpl.java
 /GlobalMenuImpl.java
 /RouteActualImpl.java
+/BackgroundFilterImpl.java
+/FeaturePathLabelImpl.java
+/SubmenuEntryImpl.java
+/BadgeImpl.java
+/IndexCardsUnitImpl.java
