Determine container type for collection units

--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -612,3 +612,4 @@ _UI_ImageUnit_missingImageFilter_feature = Missing Image Filter
 _UI_WafModel_useDbSessionStorage_feature = Use Db Session Storage
 _UI_IndexCardsUnit_type = Index Cards Unit
 _UI_DynamicUnit_servicesUsed_feature = Services Used
+_UI_CollectionUnit_containerService_feature = Container Service
