--- a/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.waf.edit/plugin.properties
@@ -613,3 +613,5 @@ _UI_WafModel_useDbSessionStorage_feature = Use Db Session Storage
 _UI_IndexCardsUnit_type = Index Cards Unit
 _UI_DynamicUnit_servicesUsed_feature = Services Used
 _UI_CollectionUnit_containerService_feature = Container Service
+_UI_CollectionUnit_collectionType_feature = Collection Type
+_UI_CollectionUnit_containerType_feature = Container Type
