Allow customisation of model labels

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -323,3 +323,4 @@ _UI_SingletonAssociationRelationships_OneToOne_literal = OneToOne
 _UI_SingletonAssociationRelationships_ManyToOne_literal = ManyToOne
 _UI_CollectionAssociationRelationships_OneToMany_literal = OneToMany
 _UI_CollectionAssociationRelationships_ManyToMany_literal = ManyToMany
+_UI_ModelLabel_customise_feature = Customise
