Allow customisation of entity features

--- a/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
+++ b/uk.ac.man.cs.mdsd.orm.edit/plugin.properties
@@ -324,3 +324,7 @@ _UI_SingletonAssociationRelationships_ManyToOne_literal = ManyToOne
 _UI_CollectionAssociationRelationships_OneToMany_literal = OneToMany
 _UI_CollectionAssociationRelationships_ManyToMany_literal = ManyToMany
 _UI_ModelLabel_customise_feature = Customise
+_UI_EntityFeature_derived_feature = Derived
+_UI_EntityFeature_customisedSet_feature = Customised Set
+_UI_EntityAttribute_hidden_feature = Hidden
+_UI_EntityFeature_customiseSet_feature = Customise Set
